--- a/tests/.nftignore
+++ b/tests/.nftignore
@@ -20,5 +20,6 @@ reports/stats/*/STAR_log/*.Log.final.out
 reports/stats/*/STAR_log/*.Log.out
 reports/stats/*/STAR_log/*.Log.progress.out
 samtools/*.{bam,bam.bai,bam.csi,cram,cram.crai}
+umitools/*.umi_extract.log
 variant_calling/**/*.vcf
 variant_calling/**/*.vcf.{gz,gz.tbi,gz.csi}
