--- a/conf/test.config
+++ b/conf/test.config
@@ -22,7 +22,7 @@ params {
     config_profile_name        = 'Test profile'
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
-    pipelines_testdata_base_path = 'https://github.com/nf-core/test-datasets/raw/refs/heads/rnavar/data'
+    pipelines_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/rnavar/data'
 
     // Input data
     input = "${projectDir}/tests/csv/1.0/fastq_single.csv"
