--- a/conf/modules.config
+++ b/conf/modules.config
@@ -311,6 +311,10 @@ process {
 
 process {
 
+    withName: GATK4_APPLYBQSR {
+        ext.prefix  = {"${meta.id}.bam"}
+    }
+
     withName: GATK4_HAPLOTYPECALLER {
         ext.args    = [
             '--dont-use-soft-clipped-bases',
@@ -329,6 +333,7 @@ process {
             pattern: "*.{vcf.gz}"
         ]
     }
+
     withName: GATK4_COMBINEGVCFS {
         ext.prefix  = {"${meta.id}.haplotypecaller"}
         publishDir  = [
