--- a/conf/modules.config
+++ b/conf/modules.config
@@ -285,7 +285,7 @@ process {
             '--use-original-qualities',
             '--add-output-sam-program-record'
         ].join(' ').trim()
-        ext.prefix  = {"${meta.id}.recal"}
+        ext.prefix  = {"${meta.id}.recal.bam"}
         publishDir  = [
             path: { "${params.outdir}/preprocessing/${meta.id}" },
             mode: params.publish_dir_mode,
@@ -310,11 +310,6 @@ process {
 // VARIANT CALLING AND FILTERING
 
 process {
-
-    withName: GATK4_APPLYBQSR {
-        ext.prefix  = {"${meta.id}.bam"}
-    }
-
     withName: GATK4_HAPLOTYPECALLER {
         ext.args    = [
             '--dont-use-soft-clipped-bases',
