--- a/conf/modules.config
+++ b/conf/modules.config
@@ -280,7 +280,7 @@ process {
         publishDir  = [ enabled: false ]
     }
 
-    withName: '.*:RECALIBRATE:APPLYBQSR' {
+    withName: '.*:RECALIBRATE:GATK4_APPLYBQSR' {
         ext.args    = [
             '--use-original-qualities',
             '--add-output-sam-program-record'
