--- a/conf/modules.config
+++ b/conf/modules.config
@@ -126,21 +126,24 @@ process {
     }
 }
 
+// UMITOOLS
+process {
+
+    // ALIGN_STAR
+    withName: UMITOOLS_EXTRACT {
+        ext.args   = { [
+            params.umitools_extract_method ? "--extract-method=${params.umitools_extract_method}" : '',
+            params.umitools_bc_pattern ? "--bc-pattern='${params.umitools_bc_pattern}'" : '',
+            params.umitools_bc_pattern2 && !meta.single_end ? "--bc-pattern2='${params.umitools_bc_pattern2}'" : '',
+            params.umitools_umi_separator ? "--umi-separator='${params.umitools_umi_separator}'" : ''
+        ].join(' ').trim() }
+    }
+}
+
 // ALIGNMENT
 process {
 
-    // UMITOOLS_EXTRACT
-    withName: UMITOOLS_EXTRACT {
-        ext.args   = { [
-                params.umitools_extract_method                  ? "--extract-method=${params.umitools_extract_method}" : '',
-                params.umitools_bc_pattern                      ? "--bc-pattern='${params.umitools_bc_pattern}'" : '',
-                params.umitools_bc_pattern2 && !meta.single_end ? "--bc-pattern2='${params.umitools_bc_pattern2}'" : '',
-                params.umitools_umi_separator                   ? "--umi-separator='${params.umitools_umi_separator}'" : ''
-        ].join(' ').trim() }
-    }
-
     // ALIGN_STAR
-
     withName: STAR_ALIGN {
         ext.args   = { [
             '--outSAMtype BAM SortedByCoordinate',
@@ -148,10 +151,10 @@ process {
             params.save_unaligned ? '--outReadsUnmapped Fastx' : '',
             params.read_length ? "--sjdbOverhang ${params.read_length - 1}" : '',
             params.star_twopass ? '--twopassMode Basic' : '',
-            params.star_max_memory_bamsort > 0 ? "--limitBAMsortRAM ${params.star_max_memory_bamsort}" : "",
-            params.star_bins_bamsort > 0 ? "--outBAMsortingBinsN ${params.star_bins_bamsort}" : "",
-            params.star_max_collapsed_junc > 0 ? "--limitOutSJcollapsed ${params.star_max_collapsed_junc}" : "",
-            params.star_max_intron_size ? "--alignIntronMax ${params.star_max_intron_size}" : ""
+            params.star_max_memory_bamsort > 0 ? "--limitBAMsortRAM ${params.star_max_memory_bamsort}" : '',
+            params.star_bins_bamsort > 0 ? "--outBAMsortingBinsN ${params.star_bins_bamsort}" : '',
+            params.star_max_collapsed_junc > 0 ? "--limitOutSJcollapsed ${params.star_max_collapsed_junc}" : '',
+            params.star_max_intron_size ? "--alignIntronMax ${params.star_max_intron_size}" : ''
             ].flatten().unique(false).join(' ').trim() }
         publishDir = [
             [
@@ -315,7 +318,7 @@ process {
             '--dont-use-soft-clipped-bases',
             '--create-output-variant-index true',
             params.gatk_hc_call_conf ? "--standard-min-confidence-threshold-for-calling $params.gatk_hc_call_conf" : '',
-            params.generate_gvcf ? "-ERC GVCF" : ""
+            params.generate_gvcf ? "-ERC GVCF" : ''
         ].join(' ').trim()
         publishDir  = [ enabled: false ]
     }
