--- a/nextflow.config
+++ b/nextflow.config
@@ -317,8 +317,8 @@ manifest {
             name: 'Praveen Raj',
             affiliation: '',
             email: '',
-            github: '',
-            contribution: [],
+            github: '@praveenraj2018',
+            contribution: ['author'],
             orcid: ''
         ],
         [
@@ -326,7 +326,7 @@ manifest {
             affiliation: 'Seqera',
             email: 'maxime.garcia@seqera.io',
             github: '@maxulysse',
-            contribution: ['author'],
+            contribution: ['author', 'maintainer'],
             orcid: '0000-0003-2827-9261'
         ],
         [
