--- a/conf/modules.config
+++ b/conf/modules.config
@@ -56,7 +56,7 @@ process {
     }
 
     withName: STAR_GENOMEGENERATE {
-        ext.args   = params.read_length ? "--sjdbOverhang ${params.read_length - 1}" : ''
+        ext.args    = { params.read_length ? "--sjdbOverhang ${params.read_length - 1}" : '' }
         publishDir = [
             path: { "${params.outdir}/genome/index" },
             mode: params.publish_dir_mode,
@@ -109,9 +109,9 @@ process {
 process {
 
     withName: MULTIQC {
-        ext.args   = { params.multiqc_title ? "--title \"$params.multiqc_title\"" : '' }
+        ext.args    = { params.multiqc_title ? "--title \"$params.multiqc_title\"" : '' }
         publishDir = [
-            path: { "${params.outdir}/reports"},
+            path: { "${params.outdir}/reports" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: !params.skip_multiqc
@@ -131,12 +131,12 @@ process {
 
     // ALIGN_STAR
     withName: UMITOOLS_EXTRACT {
-        ext.args   = { [
+        ext.args    = { [
             params.umitools_extract_method ? "--extract-method=${params.umitools_extract_method}" : '',
             params.umitools_bc_pattern ? "--bc-pattern='${params.umitools_bc_pattern}'" : '',
             params.umitools_bc_pattern2 && !meta.single_end ? "--bc-pattern2='${params.umitools_bc_pattern2}'" : '',
             params.umitools_umi_separator ? "--umi-separator='${params.umitools_umi_separator}'" : ''
-        ].join(' ').trim() }
+        ].flatten().unique(false).join(' ').trim() }
     }
 }
 
@@ -145,7 +145,7 @@ process {
 
     // ALIGN_STAR
     withName: STAR_ALIGN {
-        ext.args   = { [
+        ext.args    = { [
             '--outSAMtype BAM SortedByCoordinate',
             '--readFilesCommand zcat',
             params.save_unaligned ? '--outReadsUnmapped Fastx' : '',
@@ -155,7 +155,7 @@ process {
             params.star_bins_bamsort > 0 ? "--outBAMsortingBinsN ${params.star_bins_bamsort}" : '',
             params.star_max_collapsed_junc > 0 ? "--limitOutSJcollapsed ${params.star_max_collapsed_junc}" : '',
             params.star_max_intron_size ? "--alignIntronMax ${params.star_max_intron_size}" : ''
-            ].flatten().unique(false).join(' ').trim() }
+        ].flatten().unique(false).join(' ').trim() }
         publishDir = [
             [
                 path: { "${params.outdir}/reports/stats/${meta.id}/STAR_log" },
@@ -183,7 +183,7 @@ process {
 process {
 
     withName: '.*:ALIGN_STAR:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
-        ext.prefix  = {"${meta.id}.aligned"}
+        ext.prefix  = { "${meta.id}.aligned" }
         publishDir = [
             path: { "${params.outdir}/preprocessing/${meta.id}" },
             mode: params.publish_dir_mode,
@@ -193,8 +193,8 @@ process {
     }
 
     withName: '.*:ALIGN_STAR:BAM_SORT_SAMTOOLS:SAMTOOLS_INDEX' {
-        ext.args   = params.bam_csi_index ? '-c' : ''
-        ext.prefix = {"${meta.id}.aligned"}
+        ext.args    = { params.bam_csi_index ? '-c' : '' }
+        ext.prefix = {"${meta.id}.aligned" }
         publishDir = [
             path: { "${params.outdir}/preprocessing/${meta.id}" },
             mode: params.publish_dir_mode,
@@ -208,22 +208,22 @@ process {
     }
 
     withName: GATK4_INTERVALLISTTOOLS {
-        ext.args   = [
+        ext.args    = { [
             '--SUBDIVISION_MODE BALANCING_WITHOUT_INTERVAL_SUBDIVISION_WITH_OVERFLOW',
             '--UNIQUE true',
             '--SORT true',
             params.gatk_interval_scatter_count ? "--SCATTER_COUNT $params.gatk_interval_scatter_count" : ''
-        ].join(' ').trim()
+        ] }.join(' ').trim()
         publishDir  = [ enabled: false ]
     }
 
     withName: 'PICARD_MARKDUPLICATES' {
-        ext.args   = [
+        ext.args    = { [
             '--ASSUME_SORTED true',
             '--VALIDATION_STRINGENCY LENIENT',
             params.remove_duplicates ? '--REMOVE_DUPLICATES true' : ''
-        ].join(' ').trim()
-        ext.prefix  = {"${meta.id}.md"}
+        ] }.join(' ').trim()
+        ext.prefix  = { "${meta.id}.md" }
         publishDir  = [
             [
                 path: { "${params.outdir}/preprocessing/${meta.id}" },
@@ -241,8 +241,8 @@ process {
     }
 
     withName: '.*:BAM_MARKDUPLICATES_PICARD:SAMTOOLS_INDEX' {
-        ext.args    = params.bam_csi_index ? '-c' : ''
-        ext.prefix  = {"${meta.id}.md"}
+        ext.args    = { params.bam_csi_index ? '-c' : '' }
+        ext.prefix  = { "${meta.id}.md" }
         publishDir  = [
             path: { "${params.outdir}/preprocessing/${meta.id}" },
             mode: params.publish_dir_mode,
@@ -257,7 +257,7 @@ process {
     }
 
     withName: '.*:SPLITNCIGAR:SAMTOOLS_INDEX' {
-        ext.args    =  params.bam_csi_index ? '-c' : ''
+        ext.args    =  { params.bam_csi_index ? '-c' : '' }
     }
 
     withName: '.*:SPLITNCIGAR:.*' {
@@ -265,12 +265,12 @@ process {
     }
 
     withName: 'SAMTOOLS_STATS|SAMTOOLS_FLAGSTAT|SAMTOOLS_IDXSTATS' {
-            publishDir  = [
-                path: { "${params.outdir}/reports/stats/${meta.id}" },
-                mode: params.publish_dir_mode,
-                enabled: !params.skip_multiqc,
-                pattern: "*.{stats,flagstat}"
-            ]
+        publishDir  = [
+            path: { "${params.outdir}/reports/stats/${meta.id}" },
+            mode: params.publish_dir_mode,
+            enabled: !params.skip_multiqc,
+            pattern: "*.{stats,flagstat}"
+        ]
     }
 
 }
@@ -288,7 +288,7 @@ process {
             '--use-original-qualities',
             '--add-output-sam-program-record'
         ].join(' ').trim()
-        ext.prefix  = {"${meta.id}.recal.bam"}
+        ext.prefix  = { "${meta.id}.recal.bam" }
         publishDir  = [
             path: { "${params.outdir}/preprocessing/${meta.id}" },
             mode: params.publish_dir_mode,
@@ -298,8 +298,8 @@ process {
     }
 
     withName: '.*:RECALIBRATE:SAMTOOLS_INDEX' {
-        ext.args    = params.bam_csi_index ? '-c' : ''
-        ext.prefix  = {"${meta.id}.recal"}
+        ext.args    = { params.bam_csi_index ? '-c' : '' }
+        ext.prefix  = { "${meta.id}.recal" }
         publishDir  = [
             path: { "${params.outdir}/preprocessing/${meta.id}" },
             mode: params.publish_dir_mode,
@@ -314,17 +314,17 @@ process {
 
 process {
     withName: GATK4_HAPLOTYPECALLER {
-        ext.args    = [
+        ext.args    = { [
             '--dont-use-soft-clipped-bases',
             '--create-output-variant-index true',
             params.gatk_hc_call_conf ? "--standard-min-confidence-threshold-for-calling $params.gatk_hc_call_conf" : '',
             params.generate_gvcf ? "-ERC GVCF" : ''
-        ].join(' ').trim()
+        ] }.join(' ').trim()
         publishDir  = [ enabled: false ]
     }
 
     withName: GATK4_MERGEVCFS {
-        ext.prefix  = {"${meta.id}.haplotypecaller"}
+        ext.prefix  = { "${meta.id}.haplotypecaller" }
         publishDir  = [
             path: { "${params.outdir}/variant_calling/${meta.id}" },
             mode: params.publish_dir_mode,
@@ -333,7 +333,7 @@ process {
     }
 
     withName: GATK4_COMBINEGVCFS {
-        ext.prefix  = {"${meta.id}.haplotypecaller"}
+        ext.prefix  = { "${meta.id}.haplotypecaller" }
         publishDir  = [
             path: { "${params.outdir}/variant_calling/${meta.id}" },
             mode: params.publish_dir_mode,
@@ -342,8 +342,8 @@ process {
     }
 
     withName: TABIX_TABIX {
-        ext.args    = params.bam_csi_index ? '--csi' : ''
-        ext.prefix  = {"${meta.id}.haplotypecaller"}
+        ext.args    = { params.bam_csi_index ? '--csi' : '' }
+        ext.prefix  = { "${meta.id}.haplotypecaller" }
         publishDir  = [
             path: { "${params.outdir}/variant_calling/${meta.id}" },
             mode: params.publish_dir_mode,
@@ -352,13 +352,13 @@ process {
     }
 
     withName: GATK4_VARIANTFILTRATION {
-        ext.prefix  = {"${meta.id}.haplotypecaller.filtered"}
-        ext.args    = [
+        ext.prefix  = { "${meta.id}.haplotypecaller.filtered" }
+        ext.args    = { [
             params.gatk_vf_window_size ? "--cluster-window-size $params.gatk_vf_window_size" : '',
             params.gatk_vf_cluster_size ? "--cluster-size $params.gatk_vf_cluster_size" : '',
             params.gatk_vf_fs_filter ? "--filter-name \"FS\" --filter-expression \"FS > $params.gatk_vf_fs_filter\" " : '',
             params.gatk_vf_qd_filter ? "--filter-name \"QD\" --filter-expression \"QD < $params.gatk_vf_qd_filter\" " : '',
-        ].join(' ').trim()
+        ] }.join(' ').trim()
         publishDir  = [
             path: { "${params.outdir}/variant_calling/${meta.id}" },
             mode: params.publish_dir_mode,
