--- a/conf/modules.config
+++ b/conf/modules.config
@@ -137,6 +137,18 @@ process {
             params.umitools_bc_pattern2 && !meta.single_end ? "--bc-pattern2='${params.umitools_bc_pattern2}'" : '',
             params.umitools_umi_separator ? "--umi-separator='${params.umitools_umi_separator}'" : ''
         ].flatten().unique(false).join(' ').trim() }
+        publishDir = [
+            [
+                path: { "${params.outdir}/preprocessing/umitools/${meta.id}" },
+                mode: params.publish_dir_mode,
+                pattern: '*.{fasta.gz}'
+            ],
+            [
+                path: { "${params.outdir}/reports/stats/umitools/${meta.id}" },
+                mode: params.publish_dir_mode,
+                pattern: '*.{log}'
+            ]
+        ]
     }
 }
 
