--- a/conf/modules.config
+++ b/conf/modules.config
@@ -132,10 +132,10 @@ process {
     // ALIGN_STAR
     withName: UMITOOLS_EXTRACT {
         ext.args    = { [
-            params.umitools_extract_method ? "--extract-method=${params.umitools_extract_method}" : '',
-            params.umitools_bc_pattern ? "--bc-pattern='${params.umitools_bc_pattern}'" : '',
+            params.umitools_extract_method && true ? "--extract-method=${params.umitools_extract_method}" : '',
+            params.umitools_bc_pattern && true ? "--bc-pattern='${params.umitools_bc_pattern}'" : '',
             params.umitools_bc_pattern2 && !meta.single_end ? "--bc-pattern2='${params.umitools_bc_pattern2}'" : '',
-            params.umitools_umi_separator ? "--umi-separator='${params.umitools_umi_separator}'" : ''
+            params.umitools_umi_separator && true ? "--umi-separator='${params.umitools_umi_separator}'" : ''
         ].flatten().unique(false).join(' ').trim() }
         publishDir = [
             [
