--- a/conf/modules.config
+++ b/conf/modules.config
@@ -132,16 +132,16 @@ process {
     // ALIGN_STAR
     withName: UMITOOLS_EXTRACT {
         ext.args    = { [
-            params.umitools_extract_method && true ? "--extract-method=${params.umitools_extract_method}" : '',
-            params.umitools_bc_pattern && true ? "--bc-pattern='${params.umitools_bc_pattern}'" : '',
+            params.umitools_extract_method ? "--extract-method=${params.umitools_extract_method}" : '',
+            params.umitools_bc_pattern ? "--bc-pattern='${params.umitools_bc_pattern}'" : '',
             params.umitools_bc_pattern2 && !meta.single_end ? "--bc-pattern2='${params.umitools_bc_pattern2}'" : '',
-            params.umitools_umi_separator && true ? "--umi-separator='${params.umitools_umi_separator}'" : ''
-        ].flatten().unique(false).join(' ').trim() }
+            params.umitools_umi_separator ? "--umi-separator='${params.umitools_umi_separator}'" : ''
+        ].join(' ').trim() }
         publishDir = [
             [
                 path: { "${params.outdir}/preprocessing/umitools/${meta.id}" },
                 mode: params.publish_dir_mode,
-                pattern: '*.{fasta.gz}'
+                pattern: '*.{fastq.gz}'
             ],
             [
                 path: { "${params.outdir}/reports/stats/umitools/${meta.id}" },
@@ -225,7 +225,7 @@ process {
             '--UNIQUE true',
             '--SORT true',
             params.gatk_interval_scatter_count ? "--SCATTER_COUNT $params.gatk_interval_scatter_count" : ''
-        ] }.join(' ').trim()
+        ].join(' ').trim() }
         publishDir  = [ enabled: false ]
     }
 
@@ -234,7 +234,7 @@ process {
             '--ASSUME_SORTED true',
             '--VALIDATION_STRINGENCY LENIENT',
             params.remove_duplicates ? '--REMOVE_DUPLICATES true' : ''
-        ] }.join(' ').trim()
+        ].join(' ').trim() }
         ext.prefix  = { "${meta.id}.md" }
         publishDir  = [
             [
@@ -331,7 +331,7 @@ process {
             '--create-output-variant-index true',
             params.gatk_hc_call_conf ? "--standard-min-confidence-threshold-for-calling $params.gatk_hc_call_conf" : '',
             params.generate_gvcf ? "-ERC GVCF" : ''
-        ] }.join(' ').trim()
+        ].join(' ').trim() }
         publishDir  = [ enabled: false ]
     }
 
@@ -370,7 +370,7 @@ process {
             params.gatk_vf_cluster_size ? "--cluster-size $params.gatk_vf_cluster_size" : '',
             params.gatk_vf_fs_filter ? "--filter-name \"FS\" --filter-expression \"FS > $params.gatk_vf_fs_filter\" " : '',
             params.gatk_vf_qd_filter ? "--filter-name \"QD\" --filter-expression \"QD < $params.gatk_vf_qd_filter\" " : '',
-        ] }.join(' ').trim()
+        ].join(' ').trim() }
         publishDir  = [
             path: { "${params.outdir}/variant_calling/${meta.id}" },
             mode: params.publish_dir_mode,
