--- a/conf/modules.config
+++ b/conf/modules.config
@@ -105,7 +105,7 @@ process {
 
 process {
     withName: MULTIQC {
-        ext.args    = { params.multiqc_title ? "--title \"$params.multiqc_title\"" : '' }
+        ext.args    = { params.multiqc_title ? "--title \"${params.multiqc_title}\"" : '' }
         publishDir = [
             path: { "${params.outdir}/reports" },
             mode: params.publish_dir_mode,
@@ -122,8 +122,9 @@ process {
     }
 }
 
-// UMITOOLS
+// ALIGNMENT
 process {
+    // UMITOOLS_EXTRACT
     withName: UMITOOLS_EXTRACT {
         ext.args    = { [
             params.umitools_extract_method ? "--extract-method=${params.umitools_extract_method}" : '',
@@ -144,11 +145,8 @@ process {
             ]
         ]
     }
-}
 
-// ALIGNMENT
-process {
-    // ALIGN_STAR
+    // STAR_ALIGN
     withName: STAR_ALIGN {
         ext.args    = { [
             '--outSAMtype BAM SortedByCoordinate',
@@ -215,7 +213,7 @@ process {
             '--SUBDIVISION_MODE BALANCING_WITHOUT_INTERVAL_SUBDIVISION_WITH_OVERFLOW',
             '--UNIQUE true',
             '--SORT true',
-            params.gatk_interval_scatter_count ? "--SCATTER_COUNT $params.gatk_interval_scatter_count" : ''
+            params.gatk_interval_scatter_count ? "--SCATTER_COUNT ${params.gatk_interval_scatter_count}" : ''
         ].join(' ').trim() }
         publishDir  = [ enabled: false ]
     }
@@ -317,7 +315,7 @@ process {
         ext.args    = { [
             '--dont-use-soft-clipped-bases',
             '--create-output-variant-index true',
-            params.gatk_hc_call_conf ? "--standard-min-confidence-threshold-for-calling $params.gatk_hc_call_conf" : '',
+            params.gatk_hc_call_conf ? "--standard-min-confidence-threshold-for-calling ${params.gatk_hc_call_conf}" : '',
             params.generate_gvcf ? "-ERC GVCF" : ''
         ].join(' ').trim() }
         publishDir  = [ enabled: false ]
@@ -354,10 +352,10 @@ process {
     withName: GATK4_VARIANTFILTRATION {
         ext.prefix  = { "${meta.id}.haplotypecaller.filtered" }
         ext.args    = { [
-            params.gatk_vf_window_size ? "--cluster-window-size $params.gatk_vf_window_size" : '',
-            params.gatk_vf_cluster_size ? "--cluster-size $params.gatk_vf_cluster_size" : '',
-            params.gatk_vf_fs_filter ? "--filter-name \"FS\" --filter-expression \"FS > $params.gatk_vf_fs_filter\" " : '',
-            params.gatk_vf_qd_filter ? "--filter-name \"QD\" --filter-expression \"QD < $params.gatk_vf_qd_filter\" " : '',
+            params.gatk_vf_window_size ? "--cluster-window-size ${params.gatk_vf_window_size}" : '',
+            params.gatk_vf_cluster_size ? "--cluster-size ${params.gatk_vf_cluster_size}" : '',
+            params.gatk_vf_fs_filter ? "--filter-name \"FS\" --filter-expression \"FS > ${params.gatk_vf_fs_filter}\" " : '',
+            params.gatk_vf_qd_filter ? "--filter-name \"QD\" --filter-expression \"QD < ${params.gatk_vf_qd_filter}\" " : '',
         ].join(' ').trim() }
         publishDir  = [
             path: { "${params.outdir}/variant_calling/${meta.id}" },
