--- a/.github/workflows/nf-test.yml
+++ b/.github/workflows/nf-test.yml
@@ -1,6 +1,12 @@
 name: Run nf-test
 on:
   pull_request:
+    paths-ignore:
+      - "docs/**"
+      - "**/meta.yml"
+      - "**/*.md"
+      - "**/*.png"
+      - "**/*.svg"
   release:
     types: [published]
   workflow_dispatch:
