--- a/tests/.nftignore
+++ b/tests/.nftignore
@@ -23,6 +23,7 @@ reports/stats/*/STAR_log/*.Log.final.out
 reports/stats/*/STAR_log/*.Log.out
 reports/stats/*/STAR_log/*.Log.progress.out
 reports/stats/umitools/*/*.umi_extract.log
+reports/stats/*/*.flagstat
 samtools/*.{bam,bam.bai,bam.csi,cram,cram.crai}
 variant_calling/**/*.vcf
 variant_calling/**/*.vcf.{gz,gz.tbi,gz.csi}
