update vep to 114.2

--- a/conf/test.config
+++ b/conf/test.config
@@ -28,25 +28,28 @@ params {
     input = "${projectDir}/tests/csv/1.0/fastq_single.csv"
 
     // Genome references
-    genome            = null
+    genome = null
 
-    fasta             = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/genome.fasta"
-    dict              = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/genome.dict"
-    // gtf               = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/genome.gtf"
-    gff               = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/genome.gff3"
+    fasta = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/genome.fasta"
+    dict  = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/genome.dict"
+    // gtf   = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/genome.gtf"
+    gff   = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/genome.gff3"
 
     // Known genome resources (optional)
-    dbsnp             = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/vcf/dbsnp_146.hg38.vcf.gz"
-    dbsnp_tbi         = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/vcf/dbsnp_146.hg38.vcf.gz.tbi"
-    known_indels      = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/vcf/mills_and_1000G.indels.vcf.gz"
-    known_indels_tbi  = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/vcf/mills_and_1000G.indels.vcf.gz.tbi"
+    bcftools_annotations     = "${params.modules_testdata_base_path}/genomics/sarscov2/illumina/vcf/test2.vcf.gz"
+    bcftools_annotations_tbi = "${params.modules_testdata_base_path}/genomics/sarscov2/illumina/vcf/test2.vcf.gz.tbi"
+    bcftools_header_lines    = "${projectDir}/tests/config/bcfann_test_header.txt"
+    dbsnp                    = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/vcf/dbsnp_146.hg38.vcf.gz"
+    dbsnp_tbi                = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/vcf/dbsnp_146.hg38.vcf.gz.tbi"
+    known_indels             = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/vcf/mills_and_1000G.indels.vcf.gz"
+    known_indels_tbi         = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/vcf/mills_and_1000G.indels.vcf.gz.tbi"
 
     // STAR index (optional)
-    star_index        = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/index/star/star.tar.gz"
+    star_index = "${params.pipelines_testdata_base_path}/genomics/homo_sapiens/genome/index/star/star.tar.gz"
 
     // Annotation
     snpeff_db         = 'WBcel235.105'
-    vep_cache_version = 110
+    vep_cache_version = 114
     vep_genome        = 'WBcel235'
     vep_species       = 'caenorhabditis_elegans'
 }
