--- a/nextflow.config
+++ b/nextflow.config
@@ -345,7 +345,7 @@ manifest {
     mainScript      = 'main.nf'
     defaultBranch   = 'master'
     nextflowVersion = '!>=24.10.5'
-    version         = '1.1.1'
+    version         = '1.2.0dev'
     doi             = '10.5281/zenodo.6669636'
 }
 
