fix tests and update CHANGELOG

--- a/conf/modules/annotate.config
+++ b/conf/modules/annotate.config
@@ -56,8 +56,8 @@ process {
     }
 
     // BCFTOOLS ANNOTATE
-    withName: 'NFCORE_RNAVAR:RNAVAR:VCF_ANNOTATE_ALL:VCF_ANNOTATE_BCFTOOLS:BCFTOOLS_ANNOTATE' {
-        ext.args   = { '--output-type z' }
+    withName: 'NFCORE_RNAVAR:RNAVAR:VCF_ANNOTATE_ALL:BCFTOOLS_ANNOTATE' {
+        ext.args   = { '--output-type z --write-index=tbi' }
         ext.prefix = { input.baseName - '.vcf' + '_BCF.ann' }
         publishDir = [
                 mode: params.publish_dir_mode,
