--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -2,6 +2,7 @@ nf_core_version: 3.3.2
 repository_type: pipeline
 lint:
   schema_params: false
+  nf_test_content: false
 template:
   author: Praveen Raj, Maxime U Garcia, Nicolas Vannieuwkerke
   description: GATK4 RNA variant calling pipeline
