update schema, needs careful testing

--- a/nextflow.config
+++ b/nextflow.config
@@ -45,6 +45,9 @@ params {
     umitools_bc_pattern2            = null
     umitools_umi_separator          = null
 
+    // HLATyping
+    run_hlatyping                   = false
+
     // Variant calling
     no_intervals                    = false
 
