add sample id to publishing hierachy

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -304,6 +304,17 @@ process {
     }
 }
 
+// HLATyping
+process {
+    withName: SEQ2HLA {
+        publishDir  = [
+            path: { "${params.outdir}/seq2hla/${meta.id}" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+}
+
 // VARIANT CALLING AND FILTERING
 process {
     withName: GATK4_HAPLOTYPECALLER {
