--- a/modules/nf-core/seq2hla/meta.yml
+++ b/modules/nf-core/seq2hla/meta.yml
@@ -15,7 +15,7 @@ tools:
       documentation: "https://github.com/TRON-Bioinformatics/seq2HLA#readme"
       tool_dev_url: "https://github.com/TRON-Bioinformatics/seq2HLA"
       doi: "10.1186/s13073-015-0240-5"
-      licence: ['MIT']
+      licence: ["MIT"]
       identifier: biotools:seq2HLA
 
 input:
